# splitter

./: CMakeLists.txt  makefile
src/: splitter.cpp  splitter.h  splitter_client.cpp  splitter_client.h  splitter_definitions.h
src/easylogging++/: easylogging++.h
test/: splitter_test.cpp
